[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
fastwebsockets = { version = "0.10", features = ["upgrade"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"
bytes = "1"
crossbeam = "0.8.4"
rayon = "1.11.0"
chrono = "0.4"
